nova_tests/strings/neg/plan131_ptr_arith_outside_unsafe.nv
// Plan 131 Ф.2 NEG — pointer arithmetic outside unsafe block rejected.
// `*(p + n) = v` requires unsafe context (E_UNSAFE_REQUIRED).
// Plan 118.7: `unsafe { &x }` → `unsafe { raw &x }` для сырого стек-адреса.
// EXPECT_COMPILE_ERROR E_UNSAFE_REQUIRED

module neg.plan131_ptr_arith_outside_unsafe

import std.runtime.raw_mem.{RawMem}

fn main() -> () {
    unsafe {
        ro p = RawMem.alloc(8) as *mut int
    }
    mut x int = 0
    ro q = unsafe { raw &x }
    // Deref arithmetic outside unsafe — E_UNSAFE_REQUIRED.
    *(q + 0) = 42
}
